CHANGES
=======

* Restructuring and updating test code
* Adding results folder
* Update loss function for rmse
* Restructuring ugrnn file and input_data
* Adding Authors and Changelog
* 1. Ugrnn restructuring. 2. Enable cycle reduction in molecular graph
* Restructure network
* Restructuring
* Support for command line arguments
* Refactoring
* update hyper parameters
* Minor changes
* test file
* bug fix
* refactoring
* 1. Updating input features. 2. Update weight decay
* Rename Delaney_solubility.txt to Delaney_solubility.csv
* restructuring
* Add weight decay
* fix typo
* Updating hyper parameters
* Restructuring
* Bug Fixes
* Update the model
* restructuring
* Restructuring
* Basic model
* Removing files
* backup
* temp code
* adding code for rnn
* create initial vectors
* Changes
* parse smiles
* data parsing code
* Adding previous code
* Initial commit